--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header-wrapper">
         <div class="nav-wrapper">
             <div class="logo">
-                <a class="logo-wrapper-link" href="#">
+                <a class="logo-wrapper-link" href="https://codepen.io/">
                     <img src="https://s3-us-west-2.amazonaws.com/images-devcamp/Digital+Literacy/Codepen.io_logo.png" alt="Logo">
                 </a>
             </div>
@@ -67,10 +67,14 @@
         </div>
     </div>
     <div class="body-wrapper">
-        <div class="content-wrapper">
+        <div class="left-wrapper">
             <div class="text-wrapper">
-                <div class="content-paragraph-one">CodePen is a <span class="highlighted-text">social development environment</span> for front-end designers and developers. <span class="emoji">&#x1f44b;</span></div>
-                <div class="content-paragraph-two">It's the best place to build and deploy a website, show off your work, build test cases, and find inspiration.</div>
+                <div class="content-paragraph-one">
+                    <h2>CodePen is a <strong >social development environment</strong> for front-end designers and developers. <span class="emoji">&#x1f44b;</span></h2>
+                </div>
+                <div class="content-paragraph-two">
+                    <p>It's the best place to build and deploy a website, show off your work, build test cases, and find inspiration.</p>
+                </div>
             </div>
             <div class="buttons-wrapper">
                 <div class="button-wrapper">
@@ -81,10 +85,10 @@
                 </div>
             </div>
         </div>
-        <div class="project-wrapper">
+        <div class="right-wrapper ">
             <div class="label-wrapper">
                 <div class="label">
-                    <h2 style="margin:0px; font-size:18px;">This is <strong><a href="#" style="text-decoration: none; color: #59bde9;">CodePen Projects!</a></strong></h2>
+                    <h2 style="margin:0px;margin-left:10px; font-size:18px;">This is <strong><a href="#" style="text-decoration: none; color: #59bde9;">CodePen Projects!</a></strong></h2>
                 </div>
             </div>
             <div class="project-image-wrapper">
